Updated README.md file and updated the get notifications for datatable for both user roles
